--- a/app/src/main/res/layout/doctor_view_patients_datapacket_after_card_view.xml
+++ b/app/src/main/res/layout/doctor_view_patients_datapacket_after_card_view.xml
@@ -83,6 +83,20 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="Location:"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:textColor="#000"
+            android:id="@+id/locationTextView"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="View"
+            android:layout_marginLeft="20dp"
+            android:id="@+id/locationButton"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="Description:"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
@@ -111,6 +125,13 @@
             android:hint="Write Recommendations here..."
             android:layout_marginLeft="20dp"
             android:id="@+id/editTextDoctorGiveRecommendations"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Send Recommendation"
+            android:layout_marginLeft="20dp"
+            android:id="@+id/btnRecommendations"
+            />
 
 
     </LinearLayout>
